# OpenGL-Learning

./: .gitignore  .gitmodules  CMakeLists.txt
include/: IndexBuffer.h  Renderer.h  Shader.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  pch.h
res/shaders/: Basic.shader
src/: Application.cpp  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  pch.h
